--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,47 @@
       or implied. See the License for the specific language governing permissions and limitations under
       the License.
       -->
-    <string name="app_name">AndroidDevChallenge</string>
+    <string name="app_name">HappyPuppy</string>
+    <string name="cd_navigate_up">Navigate up</string>
+    <string-array name="puppy_name">
+        <item>泰迪犬</item>
+        <item>比熊犬</item>
+        <item>博美犬</item>
+        <item>约克夏</item>
+        <item>柯基犬</item>
+        <item>巴哥犬</item>
+        <item>法国斗牛犬</item>
+        <item>柴犬</item>
+        <item>拉布拉多犬</item>
+        <item>英国斗牛犬</item>
+        <item>哈士奇</item>
+        <item>阿拉斯加犬</item>
+        <item>秋田犬</item>
+        <item>罗威纳</item>
+        <item>杜宾</item>
+        <item>萨摩耶</item>
+        <item>卡斯罗</item>
+        <item>德国牧羊犬</item>
+    </string-array>
+    <string-array name="puppy_info">
+        <item>泰迪犬其实是贵宾犬的一种美容方式。贵宾是法国品种，一度被用作猎水鸟，19世纪和20世纪该品种达到其发展的顶峰，用作打猎、表演和陪伴。根据体型大小被分为四类，最受欢迎的是体型较小的品种：迷你贵宾犬和玩具贵宾犬。其中玩具贵宾犬是体型最小的一种，个性好动、欢快、非常机警、聪明、喜欢外出、性格脾气好、适应力强。贵宾犬不脱毛，是极好的宠物犬。如果红色玩具贵宾犬不剃胡须和嘴边的毛 可以长成动漫画里面泰迪熊的模样 所以红色（褐色）玩具贵宾犬又叫“泰迪熊”。</item>
+        <item>比熊犬是一种娇小强健的，白色粉扑型的狗狗，具有欢快的气质，它的气质从它羽毛般欢快地卷在背后的尾巴和好奇的眼神中就能体现出来。 这个品种没有任何粗重或无能夸张的地方，所以它的步态没有理由显得不匀称或不健全。 任何背离标准中所描述的理想的卷毛比雄犬的地方都属于缺陷，并需要根据背离的程度进行扣分。卷毛比雄犬的结构方面的缺陷与其他品种一样不合需要，尽管这些可能在该品种的标准中没有详细描述出来。 整体外观：欢快、有趣的小型犬，步态活泼，口吻中等长度，毛发长且蓬松，非常象蒙古山羊的被毛。头高昂，眼黑，表情活泼、富于表现.</item>
+        <item>博美是一种紧凑、短背、活跃的玩具狗。它拥有柔软、浓密的底毛和粗硬的披毛。尾根位置很高，长有浓密饰毛的尾巴平放在背上。它具有警惕的性格、聪明的表情、轻快的举止和好奇的天性。博美的步态骄傲、庄重而且活泼。它的气质和行动都是健康的。 整体外型：狐狸犬的被毛很迷人，里层被毛丰富并支撑起外层被毛。给人特别的印象是结实、脖子周围的饰毛（颈毛）像鬃一样，尾巴被毛丰富，明显举过背。长有机警眼晴的狐狸样头，以及小而尖、紧贴的耳朵，给了狐狸犬一个独具特色、面颊下垂的外貌。 重要比例：肩胛骨的高度与身体之间的比例大约为1:1。</item>
+        <item>约克夏梗因产于英国东北部约克郡而得名，故又称约克郡梗、约瑟犬、约瑟猩。约克夏梗身材娇小，体形仅次于吉娃娃小型犬，被毛柔滑如丝，如少女秀发，由头颈、躯干倾斜而下，光彩夺目。约克夏梗的头部经常用丝带装饰，并拥有梗类调皮的性格。拥有“上流贵妇人香闺”般的魅力.</item>
+        <item>威尔士柯基犬共分两种：卡迪根威尔士柯基犬和彭布罗克威尔士柯基犬。两者比较，彭布罗克柯基犬的体形较短，腿骨更直、更轻，而威尔士柯基犬背毛的质地更好；但在性情上，彭布罗克柯基犬显得不安分，容易激动，没有卡迪根威尔士柯基犬那么驯服。从12世纪的查理一世到现在的女王伊丽莎白二世，柯基犬一直是英国王室的宠物。 整体外型：低，强壮，体格结实，机警活泼，外观灵气，耐力强。</item>
+        <item>巴哥犬（或称哈巴狗）富有魅力而且高雅，18世纪末正式命名为巴哥，其词意古语为鬼，狮子鼻或小猴子的意思。巴哥犬是体贴，属于可爱的小型犬，不需要运动或经常整理背毛，但需要同伴。容貌皱纹较多，走起路来像拳击手是其特征。它是以咕噜的呼吸声及象马一样抽鼻子的声音作为沟通的方式。同时，此犬具备优良及爱干净的个性，这些特色便成为广受喜爱的原因。总体来看，通常外观呈正方形而且短胖。歪斜、长腿或腿太短的八哥犬都不受欢迎。 整体外观：明显成方形，如结实的矮脚马。体形紧凑、匀称，肌肉硬实。</item>
+        <item>法国斗牛犬外貌是一种活泼、聪明、肌肉发达的狗，骨骼沉重，被毛平滑、结构紧凑，体型中等或较小。表情显得警惕、好奇而感兴趣。除了切除狼爪以外，对它的任何改动都是错误的，属于失格。 整体外型：是一种典型的小型莫罗山犬。凶悍，体形小，身短，比例紧凑，被毛顺滑，脸短，踏鼻，竖耳，并有相应的短尾。由外貌看，具有攻击性，聪明，肌肉发达，身体结构紧密，具有坚固的骨架。</item>
+        <item>柴犬是日本本土犬种中最小的一种，最初是培养了用于在日本多山的地形中，在浓密的灌木丛中，利用视觉和嗅觉进行捕猎的猎犬。警惕而敏捷，感觉敏锐。同时，他也是一种非常卓越的看门狗和伴侣犬。它的结构紧凑，肌肉发达。雄性和雌性在外貌上截然不同，雄性明显显得雄壮，但不粗糙；雌性明显显得柔美，但结构上不显得软弱。 整体外型：柴犬外观和日本秋田犬比较好像是它的缩小版，外观和我国的一些小土狗差不多，实际上在日文中柴犬就有小狗的意思。在日本，柴犬被政府指定为“天然纪念物”。原因是其起源早，早在公元前1000年，柴犬就生活在日本山区，也叫丛林犬，动作轻盈敏捷，据说其祖先的血统中有松狮的血脉。柴犬的警觉性高，平时习惯警觉地站在高处向下观望，个性机敏、独立，身体强健，动作敏捷，以前主要是被人类训练用来猎捕小动物。柴犬毛色主要为棕黄色、黄褐棕色、也有黑色白底或黄底等色，毛质为粗短的双层毛，非常密实。外观体型中等，头顶三角形的耳朵向前顷竖立，眼睛椭圆稍小，口吻部呈锥型，平而短的背部，尾巴浓密呈镰刀状，站立远望时精神抖擞，一看就觉得非常机敏聪明。柴犬习性聪明，身体清洁，体型较小但护卫性强，忠于主人，容易训练，各方面素质都不错，适合家庭饲养.</item>
+        <item>拉布拉多寻回犬是一种结构坚固、中等体型、接合较短的狗，它健康、稳定性良好的结构使它能够成为寻回猎物的枪猎犬；它的体质和坚固的结构使它能在艰苦的条件下，长时间从事猎取水鸟或在丘陵地带狩猎这样的工作；特征和品质是它在比赛中获胜的关键；它的气质也适合成为一个家庭伴侣。身体素质和智力特征能够训练用于追击到搜索等不同环境中。拉布拉多寻回犬独特的特征它们有短、浓厚且能抵御恶劣气候条件的被毛，像“水獭”的尾巴；线条清晰的头部，后脑宽阔，止部适中；有力的颌部；及“锐利”而友善的眼神，特征明显，聪明而气质良好。首先是整体条件，一个拉布拉多寻回犬应该非常协调，无需努力或只需要稍微努力一下，就可以很好的周旋于比赛场或在野外工作。典型的拉布拉多寻回犬拥有文雅的品质，但不过分精致，体质良好，但不粗笨或土气。拉布拉多寻回犬最早是作为工作用途的枪猎犬培养的，所以结构和稳固至关重要。 整体外型：骨格强健，腰部接合紧密，非常活跃；颅骨宽阔；胸部与肋骨宽而深；腰部与后躯宽阔而强健。</item>
+        <item>完美的英国斗牛犬必须是一种中等体型、被毛平顺的狗；拥有沉重、肥壮、低矮而摇晃的身躯，脸部短，厚重的头部，宽阔的肩胛和强健的四肢。整体外观和姿势显示出非常稳固，有活力且充满力量。性格显得平静而和蔼，坚定而勇敢（不显得恶意或好斗），它的风度显得平和而威严。这些品质透过表情和风度体现出来。 整体外型：被毛平滑，较厚，身体重心较低，宽阔，肌肉有力，紧密。头部与体形相比，显得略大，虽然与身体其它部位相比，显得较大，但是并没有总体的对称性，或者使得犬看起来有点畸形，也没有防碍运动的力量。面部较短，口吻部较宽，钝而略向上倾。显得呼吸局促的犬是不可接受的。身体短，肌肉接合紧密，没有肥胖的倾向。四肢结实，肌肉发达，骨格硬朗。后躯高而强健，但与沉重的身体前部相比，略轻。与公犬相比，母犬身体没有那么庞大，肌肉发没有那么发达。</item>
+        <item>西伯利亚哈士奇属于中型工作犬，脚步轻快，动作优美。身体紧凑，有着很厚的被毛，耳朵直立，尾巴像刷子，显示出北方地区的遗传特征。哈士奇的整体外型:哈士奇是一种中等大小的工作犬，脚步轻快，动作优美。这种犬身体结构紧凑，被毛良好，耳竖立，尾如毛刷，这些都显出其具有北方气息。其步态特征为平稳、轻松。这种犬通过戴上绳索来行使自己的职能，能够以适当的速度长距离运输重量轻的物品。其身体比例和体形反应出其在力量、速度和耐力方面的平衡性。雄性西伯利亚哈士奇更具刚性但不粗糙；雌性则更具柔性但体格不显虚弱。在正确的条件下，其肌肉坚实且发育良好，西伯利亚哈士奇不会超重。哈士奇的重要比例：侧面看，其自肩顶到臀后顶的长度略长于自地面到马肩隆顶部的高度。哈士奇犬自鼻尖到止部的距离等同于自止部到枕骨的距离。</item>
+        <item>阿拉斯加雪橇犬是最古老的雪橇犬之一。体格硬壮，属于尖嘴犬种，此犬的力道比西伯利亚雪橇犬强，不仅能载运重物,还能背负重物行走极远的路程。阿拉斯加雪橇犬的名称来自阿拉斯加的马拉缪特族。在最初北美移民的纪录上，可发现有此犬的记载。此全属匀称的体格和有顽强精神和忍耐力的犬种。在使用雪橇的年代里马拉缪特族已拥有此强壮并能在北极雪地中旅行的犬种，让其他族人十分羡慕。阿拉斯加雪橇犬于阿拉斯加开拓初期，因为和输入犬种异种交配，几乎灭绝。1926 年，美国采取了纯血种的保护措施。</item>
+        <item>日本秋田犬因原产地秋田县而得名。属尖嘴犬系，力强壮，爱好运动的品种。在日本被用来做都犬火警备犬，现在在世界各地也成为十分受欢迎的家庭犬。整体外型：大型犬，体格强壮，身材匀称，气质佳；第二性别特征非常明显，高贵威严；身体结构紧凑。重要比例：肩胛骨的高度和体长（自肩顶到臀尖）的比例是10：11。但是雌性略比雄性体长。 拉丁学名Canis lupus familiaris  别    称日本秋田犬/日系秋田犬 界动物界 门脊索动物门(Phylum Chordata) 亚    门脊椎动物亚门(Vertebrata) 纲哺乳纲(Mammalia) 亚    纲真兽亚纲(Eutheria) 目食肉目(Carnivora) 亚    目裂脚亚目 科犬科(Canidae) 亚    科犬亚科 属犬属(Canis) 种灰狼(Canis lupu)s 亚    种家犬(Canis lupus familiaris) 分布区域原产于日本，由流放到日本本州秋田县的日本贵族所培育。 体型大型犬 功能狩猎犬、伴侣犬原产地日本 英文名Japanese Akita 主要毛色赤色、白色、虎斑色 棕色</item>
+        <item>理想的罗威纳犬是一个中等大小，精力充沛而且非常有力的狗，黑色配有边界清晰的铁锈色斑纹。紧凑而坚固的结构显示出巨大的力量、敏捷度、耐力。雄性比雌性更加魁梧、骨架更大且骨量更多。雌性显得柔美但在结构和体质上不显得软弱。 整体外型：罗威纳犬体形中等至大型不等，体重既不太重，也不太轻，腿既不太长，身体也不虚弱。身体比例协调，骨架紧密，肌肉强健有力，灵活而富有耐力。重要比例：由胸板（胸骨）点至坐骨骨节间的身体长度不应超过肩高的15％</item>
+        <item>杜宾外观为中等大小，身躯呈正方形。身体结构紧凑，肌肉发达而有力，具有极大的耐力和速度。相貌文雅，态度自信，显示出其高贵的气质。活泼、警惕、坚定、机敏、勇敢忠诚而顺从。 整体外型：杜宾犬体形中等，强壮，骨格肌肉发达。身体曲线优美，举止自信，表情坚定且充满了活力。 重要比例：杜宾犬的身体似乎看起来近于正方形，对于公犬来说，尤其如此。公犬肩点至臀蹲点的身体长度不应比肩至地面的高度大5％以上，母犬不应大10％以上。</item>
+        <item>萨摩耶犬，原本是一种工作犬，常出现在美丽的图画中。机警、有力、非常活泼、高贵而文雅。由于它是在寒冷地区的工作犬，所以它拥有非常浓厚的、能抵御各种气候条件的被毛。良好的修饰、非常好的毛发质地比毛发数量更重要，雄性的“围脖”比雌性更浓厚一些。它的后背不能太长，软弱的后背使它无法胜任其正常的工作，失去了工作犬的价值，但与此同时，太紧凑的身体对一种拖曳犬来说，也非常的不利。繁殖者应该采取折中方案，身体不长但肌肉发达，允许例外；胸部非常深；且肋骨扩张良好；颈部结实；前躯直而腰部非常结实。雄性外貌显得雄壮，而没有不必要的攻击性；雌性的外貌或构造显得娇柔但气质上不显得软弱。雌性的后背也许比雄性略长一些。它们的外观都显得具有极大的耐力，但不显粗糙。由于胸很深，所以腿部要有足够的长度，一条腿很短的狗是非常不受欢迎的。后臀显得非常发达，后膝关节适度倾斜，而且后膝关节存在任何问题或牛肢都将不被接受。整体外观还包括了动作和整体结构，应该显得平衡和谐，体质非常好。</item>
+        <item>卡斯罗是古代名为“Mollosser”的猛犬的后裔。他们是意大利的地产狗，现在作为军警犬而存在，古罗马时代人们用它们来狩猎狮子。他们拥有强大的力量，勇气和稳定的神经类型。它们被用来狩猎大型猎物如野猪，牡鹿和放牧牲畜。现在，卡斯罗被训练成为一种优秀的护卫犬，对它所属的家庭有极其忠诚，对陌生人特别的冷淡。它有着天生的极佳的看护能力，具有准确识别敌友的能力。它的名字来自拉丁语的 "cohors"，这个单词的意思是“看守者，牲畜护卫者.</item>
+        <item>一条好的德国牧羊犬给人的印象是结实、敏捷、肌肉发达、警惕、且充满活力。非常平稳，前后躯非常和谐。体长略大于身高，身躯很深，身体轮廓的平滑曲线要胜于角度。身躯坚固而非细长，不论在休息时还是在运动中，给人的印象都是肌肉发达、敏捷，既不显得笨拙，也不显得软弱。理想的德国牧羊犬给人的印象是素质良好，具有无法形容的高贵感，但一眼就能分辨出来，不会弄错。性别特征非常明显，根据其性别不同，或显得雄壮、或显得柔美。</item>
+    </string-array>
+    <string name="title_activity_puppy_info">PuppyInfoActivity</string>
 </resources>
